# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.2 2005/04/08 11:41:13 wolf31o2 Exp $

  08 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/gamecd.conf.example, livecd/runscript-support/livecdfs-update.sh:
  Updated livecdfs-update.sh to work properly with hotplug firmwares and also
  updated gamecd.conf.example, since the ut2004demo shell script has been
  renamed to ut2004-demo.

  06 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/gamecdfs-update.sh,
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript/default-runscript.sh:
  Fixed gamecdfs-update and gamecd.conf to not error.

  30 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Added /usr/portage as tmpfs (this will be made conditional later).

  29 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/files/livecd-bash_profile, livecd/runscript/default-runscript.sh:
  Added a new livecd-bash_profile that sources ~/.bashrc in case we're called
  from an interactive shell.

  29 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/files/livecd-bash_profile, +livecd/files/livecd-bashrc,
  livecd/files/livecd-local.start, -livecd/files/mkvardb,
  livecd/runscript-support/pre-kmerge.sh,
  livecd/runscript/default-runscript.sh:
  Moved livecd-bash_profile to livecd-bashrc. Added check for
  /usr/livecd/profiles to livecd-local.start. Removed mkvardb. Removed legacy
  sed call from pre-kmerge.sh since it has been fixed in genkernel for a long
  time.

  24 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/arm.py, catalyst,
  modules/generic_stage_target.py:
  Applying arm patch from vapier and closing bug #86466. This is now catalyst
  1.1.8, so enjoy.

  24 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> +livecd/files/mkvardb,
  livecd/runscript/default-runscript.sh,