@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.2 2005/04/08 11:41:13 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.3 2005/04/09 12:50:11 wolf31o2 Exp $
+
+  09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript-support/pre-kmerge.sh:
+  Forcing genkernel to install with proper USE flags, rather than relying on
+  us to have the right one in livecd-stage1.
 
   08 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   examples/gamecd.conf.example, livecd/runscript-support/livecdfs-update.sh:
